# cs3-map-edit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  actor.cpp  actor.h  animator.cpp  animator.h  animzdata.h  anniedata.h  app_version.h  data.cpp  data.h  dlgabout.h  dlgabout.ui  dlgattr.cpp  dlgattr.h  dlgattr.ui  dlgresize.cpp  dlgresize.h  dlgresize.ui  dlgselect.cpp  dlgselect.h  dlgselect.ui  dlgtest.cpp  dlgtest.h  dlgtest.ui  game.cpp  game.h  gamemixin.cpp  gamemixin.h  level.cpp  level.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  maparch.cpp  maparch.h  (+18 more)
.github/workflows/: linux_release.yml  windows_release.yml
data/: animz.obl  annie.obl  tiles.obl  tilestiny.obl
linux/: CS3MapEdit.desktop
shared/: DotArray.h  FileWrap.h  Frame.cpp  Frame.h  FrameSet.cpp  FrameSet.h  IFile.h  PngMagic.cpp  PngMagic.h  glhelper.h  helper.cpp  helper.h  map.cpp  map.h  ss_version.h  stdafx.h
shared/implementers/: sn_sdl.cpp
shared/interfaces/: ISound.h
shared/qtgui/: qfilewrap.h  qthelper.cpp  qthelper.h
src/: LayerDock.cpp  LayerDock.h  MapView.cpp  MapView.h  MapWidget.cpp  MapWidget.h  SpellHighlighter.h  SpellTextEdit.h  TileSelectorWidget.cpp  TileSelectorWidget.h  actor.cpp  actor.h  animator.cpp  animator.h  animzdata.h  anniedata.h  app_version.h  attr.h  chars.cpp  chars.h  colormap.cpp  colormap.h  dlgabout.cpp  dlgabout.ui  dlgattr.h  dlgattr.ui  dlgmsgs.cpp  dlgmsgs.h  dlgmsgs.ui  dlgresize.cpp  dlgselect.cpp  dlgselect.h  dlgselect.ui  dlgstat.cpp  dlgstat.h  dlgstat.ui  dlgtest.cpp  dlgtest.h  events.h  game.cpp  (+52 more)
src/data/: Annie.ini  animz.obl  annie.obl  bosses.obl  sheet0.obl  sheet1.obl  tiles.obl
src/runtime/: actor.cpp  actor.h  ai_path.cpp  ai_path.h  animator.cpp  animator.h  animzdata.h  anniedata.h  attr.h  boss.cpp  boss.h  bossdata.cpp  bossdata.h  build.h  chars.cpp  chars.h  color.h  (+46 more)
tools/: README
(+236 files in other folders)
